# bazel-kotlin

./: LICENSE  README.md  WORKSPACE
example/: BUILD.bazel  main.kt
